Fix spacing between add buttons #78

--- a/client/src/app/resources/resources.component.scss
+++ b/client/src/app/resources/resources.component.scss
@@ -23,7 +23,7 @@
     margin-bottom: 13px;
 }
 
-.new-object-button{
+.new-object-button-mobile {
     margin: 0 auto;
 }
 
